--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import FormLayout from '../layouts/FormLayout.astro';
 import LoginForm from '../react-components/LoginForm';
 ---
 
-<Layout title='Login'>
-  <LoginForm client:only="react" />
-</Layout>
+<FormLayout title='Login'>
+  <LoginForm client:only='react' />
+</FormLayout>
