--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,36 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-
-interface Image {
-  id: number;
-  description: string;
-  image: string;
-  user: {
-    name: string;
-    lastname: string;
-    id: string;
-  };
-}
-
-const data: Image[] = await fetch(import.meta.env.API_URL + '/images').then(
-  (res) => res.json()
-).catch(e => Astro.redirect('/404'));
 ---
 
 <Layout title='Home'>
   <section>
-    {
-      data.map((image) => (
-        <div>
-          <div>
-            <img src={image.image} width='100' height='100' />
-          </div>
-          <div>
-            <p>{image.description}</p>
-            <span>{image.user.id}</span>
-          </div>
-        </div>
-      ))
-    }
+    Home
   </section>
 </Layout>
