--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,3 @@
 <footer>
-  Powered By JefersonLC - Copyright {new Date().getFullYear()}
+  {new Date().getFullYear()} - Todos los derechos reservados
 </footer>
