--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from '../components/Footer.astro';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
+import Aside from '../components/Aside.astro';
 
 export interface Props {
   title: string;
@@ -18,8 +19,9 @@ const { title } = Astro.props;
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <Navigation />
+  <body id="body">
+    <Header />
+    <Aside />
     <slot />
     <Footer />
   </body>
