--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,10 @@
 ---
 import LinkList from '../react/Nav';
+import TogglerNav from '../react/TogglerNav';
 ---
 
-<header class='container justify-around hidden sm:flex bg-gray-600'>
+<header class='flex justify-around fixed top-0 w-full px-5 py-5 bg-slate-800'>
+  <TogglerNav client:load />
   <h3>Portfolio</h3>
   <LinkList client:only='react' />
 </header>
