--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
-import Aside from '../components/Aside.astro';
 
 export interface Props {
   title: string;
@@ -11,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='en' class="dark">
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
@@ -19,9 +18,8 @@ const { title } = Astro.props;
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body id='body' class='relative'>
+  <body id='body' class='bg-slate-800 pt-16'>
     <Header />
-    <Aside />
     <slot />
     <Footer />
   </body>
