--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,15 +10,22 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang='en' class="dark">
+<html lang='es' class='scroll-smooth dark'>
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <link
+      rel='stylesheet'
+      href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css'
+      integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=='
+      crossorigin='anonymous'
+      referrerpolicy='no-referrer'
+    />
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body id='body' class='bg-slate-800 pt-16'>
+  <body class='pt-16'>
     <Header />
     <slot />
     <Footer />
