--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import Nav from '../react/Nav';
 ---
 
 <header
-  class='fixed top-0 left-0 right-0 px-7 py-5 flex justify-around text-xl z-10 bg-zinc-800'
+  class='fixed top-0 left-0 right-0 px-7 py-5 flex justify-around text-xl z-10 dark:bg-zinc-800 dark:text-white'
 >
   <h2 class="flex-grow">My Portfolio</h2>
   <div class='flex-grow text-end hidden sm:block'>
