--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,9 +25,11 @@ const { title } = Astro.props;
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class='pt-20'>
+  <body class='dark:bg-darkblue'>
     <Header />
-    <slot />
+    <main class='container'>
+      <slot />
+    </main>
     <Footer />
   </body>
 </html>
