--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,9 +5,9 @@ import Nav from '../react/Nav';
 ---
 
 <header
-  class='fixed top-0 left-0 right-0 px-7 py-5 flex justify-around text-xl z-10 dark:bg-zinc-800 dark:text-white'
+  class='fixed top-0 left-0 right-0 px-7 sm:px-20 py-5 flex justify-around text-xl z-10 dark:bg-darkblue' 
 >
-  <h2 class="flex-grow">My Portfolio</h2>
+  <h2 class="flex-grow text-green">JL</h2>
   <div class='flex-grow text-end hidden sm:block'>
     <LinkList client:load />
   </div>
