--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,41 +1,33 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import ProjectsList from '../react/ProjectsList'
-
+import ProjectsList from '../react/ProjectsList';
 ---
 
 <Layout title='Home'>
-  <section class='overflow-hidden'>
-    <ProjectsList client:only />
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis placeat magnam accusantium aliquam nulla, ratione tempore adipisci quia dolor dicta architecto obcaecati totam ipsa nisi sed, culpa unde. Laborum, sapiente.
-    Ut quia suscipit provident nam labore, voluptate consectetur pariatur nulla molestias quo necessitatibus eaque? Enim dolorem assumenda velit culpa natus nulla placeat ipsum incidunt vel corrupti. Exercitationem officia quibusdam labore!
-    Eligendi aliquam dolor asperiores assumenda aperiam illum. Cumque, placeat eius maiores et assumenda eveniet sequi dolores ut, maxime architecto incidunt dignissimos sit, eos explicabo. Alias neque esse debitis iste laborum!
-    Similique, saepe est magni consequuntur, quo ad libero rem, vel reprehenderit sequi quas dignissimos? Dolorum quia dolorem magnam libero tenetur earum, est maxime et perferendis hic obcaecati fugit laboriosam cum?
-    Neque, reiciendis ex repellendus quia officiis amet eveniet excepturi nobis a dolor velit ullam harum ducimus odio tenetur fugiat iure, nisi quis, in impedit animi deleniti laboriosam? Dignissimos, id. Quia!
-    Dicta ipsa exercitationem dignissimos non earum. Molestias illo, natus iusto quidem ut quasi officia asperiores quibusdam at laudantium ex! Eligendi qui explicabo aliquid iste repudiandae odit quidem dolore voluptatibus et?
-    Aliquid expedita eligendi quaerat dignissimos iure unde facilis, mollitia magni distinctio magnam sapiente fugiat voluptatum esse? Qui repellat dignissimos labore quod ab sapiente cum, dolore alias totam eius tenetur optio!
-    Praesentium iste, nemo quasi alias animi vero qui. Nesciunt optio quo minima quidem reiciendis sapiente natus quos commodi doloribus quam odit, totam vitae unde sunt non veritatis debitis impedit laboriosam!
-    Dignissimos, aperiam laboriosam assumenda quam mollitia doloremque ea adipisci cupiditate, itaque, quibusdam facere ullam excepturi fugit ipsum deserunt. Nulla odit ullam animi adipisci deserunt? Porro, in? Aliquam nobis aperiam minima.
-    Pariatur quam aut ullam sequi, excepturi voluptate aliquam veniam fuga nihil repellendus aspernatur, vitae non voluptatibus voluptas beatae architecto dicta impedit ut in nisi! Nobis alias sunt tempore ducimus illo?
-    Doloribus nam magni nihil, error odio inventore obcaecati amet vitae fugiat autem ratione aut quia repudiandae ducimus ex, similique enim rerum porro corporis vel a, consequuntur deserunt repellat dolorem? Omnis!
-    Tempore, natus quas reiciendis consectetur ipsa, minima cum laudantium nesciunt enim nulla eligendi eius, veritatis maxime ut est repellat tenetur saepe rerum accusantium minus atque placeat dignissimos maiores. Amet, labore.
-    A dolorum saepe tempora quidem maxime ea assumenda optio excepturi, deserunt quia nemo repellat molestiae voluptate recusandae ipsam. Sed molestias doloremque fugiat aperiam officia illo quasi assumenda deleniti iste vero?
-    Magnam, numquam dolore nisi neque ipsam error repudiandae facere perspiciatis quidem doloribus dolor alias sed unde, quam ea rerum? Necessitatibus, enim ipsa. Quo cum repellendus dolorem animi esse quia sequi.
-    Vel amet nemo illum eum iusto a laboriosam minima doloremque magnam voluptatibus enim ipsa dolor consequuntur maxime corporis neque aliquam nostrum corrupti non harum voluptatem nisi possimus, earum magni? Explicabo?
-    Doloremque illum nisi possimus omnis unde expedita dolores dignissimos quod sit nesciunt totam ipsa voluptate veniam quos eveniet porro similique, deserunt beatae commodi velit corporis odio ullam laudantium perferendis? Illum!
-    Omnis, voluptatibus. Distinctio deserunt atque ad inventore modi voluptate, repellat illum? Doloribus ducimus maiores nulla tempore quos error placeat vero explicabo totam similique odit laboriosam, excepturi impedit ad asperiores voluptatem?
-    Harum sed est accusantium officia at minima eaque eius saepe quibusdam vitae architecto cum consequuntur quod voluptatum recusandae doloremque magnam, perferendis ratione autem dicta earum error quis temporibus quam. Illo!
-    Quis, quia aliquam sunt praesentium nihil voluptatem incidunt distinctio veniam minus consequuntur esse velit dicta rem maiores nisi vero dolores vel numquam iste animi error laboriosam! Voluptatum provident odio quibusdam.
-    Ut pariatur molestiae ducimus, iusto dolores quo nulla ipsa omnis voluptas delectus voluptatibus voluptates dolore sint praesentium rerum magnam officiis laborum magni rem atque! Nobis fuga illo aperiam veritatis fugiat.
-    Corporis esse odit expedita. Sequi amet voluptate consequatur odio minima nihil maiores sapiente similique ad, nisi quibusdam? Soluta sed cupiditate assumenda nemo inventore, est deleniti sunt dolorem alias, ullam itaque!
-    Doloremque sapiente animi esse tempora minus architecto sed ducimus laborum officia aut a non corrupti, natus expedita eum eligendi reprehenderit? Ratione libero nobis amet voluptate, voluptatem nesciunt nostrum expedita officia.
-    Beatae, soluta obcaecati? Deleniti laboriosam reprehenderit excepturi perspiciatis non architecto, porro debitis, illum illo quod, recusandae mollitia. Illum earum facere doloremque, deserunt quibusdam atque alias asperiores dolore libero assumenda! Earum?
-    Quia, accusamus asperiores impedit pariatur similique neque nemo fugiat aliquam placeat nostrum soluta accusantium natus, eaque deserunt facilis ipsa consequuntur libero explicabo. Qui, fuga minima voluptates vel eum nam quos.
-    Nihil eligendi molestiae aspernatur quas aut distinctio aperiam a? Temporibus commodi nisi rem quaerat harum iste, quasi, voluptate quia similique deserunt corporis deleniti doloremque molestias, optio praesentium. Odio, cumque reprehenderit.
-    Deserunt dolorem maiores at obcaecati reprehenderit. Corrupti cumque quis sed quia sint soluta consectetur hic tempore praesentium. Nostrum, cum earum ipsam repellat, minima officiis, est tempora illum quia eligendi asperiores?
-    Obcaecati, delectus earum in omnis perspiciatis reiciendis neque sit placeat debitis tempore voluptates voluptas voluptatibus est pariatur quibusdam iusto, laborum odit officia officiis? Temporibus officia iste suscipit eligendi ducimus explicabo.
-    Omnis quisquam adipisci aliquid porro possimus, doloremque repudiandae fugiat nemo laboriosam nulla, eos repellendus quibusdam vero aperiam saepe quos sapiente ducimus, odit veritatis optio eveniet delectus cumque explicabo. Atque, sit!
-    Fugit dignissimos explicabo soluta dolor nulla commodi aspernatur saepe sunt excepturi magnam perspiciatis, harum, eligendi, dolorum sint. Nam aut quia blanditiis magnam repudiandae ipsum cum! Ut commodi reiciendis dignissimos doloremque.
-    Quam rerum ducimus vel excepturi non hic ab beatae ut. Sunt porro ad debitis quisquam perferendis obcaecati deserunt, vel sit dolores iure error velit. Aspernatur saepe dolorem odio quis qui.
+  <section
+    class='h-screen flex flex-col align-middle justify-center px-4 sm:px-10 gap-3'
+  >
+    <div class='text-green'>
+      <h2>Hola, me llamo</h2>
+    </div>
+    <div class='text-3xl font-semibold text-gray-100'>
+      <h3>Jeferson Limay.</h3>
+    </div>
+    <div class='text-gray-200'>
+      <p>
+        Soy estudiante de Tecnologías de la Información y Comunicación(TIC). Soy
+        un programador autodidacta que se dedica realizar cosas en la web :)
+      </p>
+    </div>
+    <div class='text-green mt-12'>
+      <a
+        href='https://github.com/JefersonLC'
+        class='border py-4 px-6 border-green rounded-md'>Perfil de GitHub</a
+      >
+    </div>
+  </section>
+  <section id='about' class='h-screen'></section>
+  <section id='projects' class='h-screen'>
+    <ProjectsList client:visible />
   </section>
 </Layout>
