--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class='dark:bg-darkblue'>
+  <body class='dark:bg-blue-100'>
     <Header />
     <main class='container'>
       <slot />
