--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,19 +15,25 @@ import ProjectsList from '../react/ProjectsList';
     </div>
     <div class='text-gray-200'>
       <p>
-        Soy estudiante de Tecnologías de la Información y Comunicación(TIC). Soy
-        un programador autodidacta que se dedica realizar cosas en la web :)
+        Soy estudiante de Tecnologías de la Información y Comunicación (TIC).
+        Soy programador autodidacta que se dedica realizar cosas pequeñas en la
+        web :)
       </p>
     </div>
     <div class='text-green mt-12'>
       <a
         href='https://github.com/JefersonLC'
-        class='border py-4 px-6 border-green rounded-md'>Perfil de GitHub</a
+        class='border py-4 px-6 border-green rounded-md hover:bg-green hover:text-blue-100'
+        >Perfil de GitHub</a
       >
     </div>
   </section>
-  <section id='about' class='h-screen'></section>
-  <section id='projects' class='h-screen'>
+  <section
+    class='h-screen flex flex-col align-middle justify-center px-4 sm:px-10 gap-3'
+  >
+    <div class='text-3xl font-semibold text-gray-100'>
+      <h2 id='projects'>Algunos proyectos:</h2>
+    </div>
     <ProjectsList client:visible />
   </section>
 </Layout>
