--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,19 @@
-<footer>
-  {new Date().getFullYear()} - Todos los derechos reservados
+<footer
+  class='container flex flex-col gap-3 justify-center items-center text-gray-100'
+>
+  <div class='mt-3'>
+    <p>{new Date().getFullYear()} - Todos los derechos reservados</p>
+  </div>
+  <div class='mb-3'>
+    <p>
+      Jeferson Limay -
+      <a
+        class='hover:text-green hover:underline'
+        href='mailto:c.jeferson.lc@gmail.com'
+        target='_blank'
+      >
+        c.jeferson.lc@gmail.com
+      </a>
+    </p>
+  </div>
 </footer>
