--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,11 @@ export interface Project {
   title: string;
   slug: string;
   description: string;
-  categories: string[];
+  languages: string[];
   sourceCode: string;
   link: string;
+  stars: number;
+  forks: number;
 }
 ---
 
@@ -51,12 +53,10 @@ export interface Project {
     <div class='text-3xl sm:text-4xl font-semibold text-gray-100'>
       <h2 id='projects'>Herramientas usadas:</h2>
     </div>
-    <div
-      class='grid grid-cols-2 xl:grid-cols-3 gap-3 mt-6'
-    >
+    <div class='grid grid-cols-2 xl:grid-cols-3 gap-3 mt-6'>
       {
         Icons.map((Icon) => (
-          <div class="flex [&>svg]:min-w-[70px] [&>svg]:md:min-w-[10px]">
+          <div class='flex [&>svg]:min-w-[70px] [&>svg]:md:min-w-[10px]'>
             <Icon.icon />
             <span>{Icon.name}</span>
           </div>
