--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import projects from '../utils/projects.json';
 import Layout from '../layouts/Layout.astro';
 import Section from '../components/Section.astro';
 import ProjectCard from '../components/ProjectCard.astro';
+import Carousel from '../react/Carousel';
 import { Icons } from '../utils/icons';
 
 export interface Project {
@@ -54,14 +55,7 @@ export interface Project {
       <h2 id='projects'>Herramientas usadas:</h2>
     </div>
     <div class='grid grid-cols-2 xl:grid-cols-3 gap-3 mt-6'>
-      {
-        Icons.map((Icon) => (
-          <div class='flex [&>svg]:min-w-[70px] [&>svg]:md:min-w-[10px]'>
-            <Icon.icon />
-            <span>{Icon.name}</span>
-          </div>
-        ))
-      }
+      <Carousel client:load />
     </div>
   </Section>
 </Layout>
