--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,35 +1,21 @@
 ---
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
-
 export interface Props {
-  title: string;
+  title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!DOCTYPE html>
-<html lang='es' class='scroll-smooth dark'>
+<html lang='es'>
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <link
-      rel='stylesheet'
-      href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css'
-      integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=='
-      crossorigin='anonymous'
-      referrerpolicy='no-referrer'
-    />
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class='dark:bg-blue-100'>
-    <Header />
-    <main class='container'>
-      <slot />
-    </main>
-    <Footer />
+  <body class='container bg-blue-200 px-8'>
+    <slot />
   </body>
 </html>
