--- a/src/components/SectionContent.astro
+++ b/src/components/SectionContent.astro
@@ -2,7 +2,7 @@
 const { id, title } = Astro.props
 ---
 
-<div id={id}>
+<div id={id} class='mb-24'>
   <h5 class='mb-6 text-2xl text-gray-100 font-[700]'>{title}</h5>
   <slot />
 </div>
