--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,28 +1,10 @@
 ---
-import CSSIcon from '../icons/skills/CSSIcon.astro';
-import ExpressIcon from '../icons/skills/ExpressIcon.astro';
-import GitIcon from '../icons/skills/GitIcon.astro';
-import HTMLIcon from '../icons/skills/HTMLIcon.astro';
-import JavaScriptIcon from '../icons/skills/JavaScriptIcon.astro';
-import MySQLIcon from '../icons/skills/MySQLIcon.astro';
-import NextIcon from '../icons/skills/NextIcon.astro';
-import ReactIcon from '../icons/skills/ReactIcon.astro';
-import SupabaseIcon from '../icons/skills/SupabaseIcon.astro';
-import TailwindIcon from '../icons/skills/TailwindIcon.astro';
-import TypeScriptIcon from '../icons/skills/TypeScriptIcon.astro';
+import { icons } from '../utils/icons';
 import SectionContent from './SectionContent.astro';
 ---
 
 <SectionContent id='#skills' title='Habilidades'>
-    <HTMLIcon />
-    <CSSIcon />
-    <JavaScriptIcon />
-    <TypeScriptIcon />
-    <TailwindIcon />
-    <ExpressIcon />
-    <ReactIcon />
-    <GitIcon />
-    <MySQLIcon />
-    <SupabaseIcon />
-    <NextIcon />
+	<div class='text-gray-200'>
+		{icons.map(({ name, Icon }) => <Icon />)}
+	</div>
 </SectionContent>
