--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class='container bg-blue-200 px-2'>
+  <body class='container bg-blue-200 px-6 sm:px-4'>
     <slot />
   </body>
 </html>
