fixed hover style

--- a/src/components/SkillIcon.astro
+++ b/src/components/SkillIcon.astro
@@ -2,8 +2,8 @@
 const { name } = Astro.props
 ---
 
-<div class='text-center [&>span]:hover:opacity-100'>
-  <div class='flex justify-center items-center hover:text-green mb-2'>
+<div class='text-center [&>span]:hover:opacity-100 hover:text-green'>
+  <div class='flex justify-center items-center mb-2'>
     <slot />
   </div>
   <span
