--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,31 +1,43 @@
 ---
-import type { Project } from '../pages/index.astro';
-import Language from './Language.astro';
+import ForkIcon from '../icons/ForkIcon.astro'
+import StarIcon from '../icons/StarIcon.astro'
+import Language from './Language.astro'
 
-const { project } = Astro.props as { project: Project };
+interface Project {
+  title: string
+  slug: string
+  description: string
+  languages: string[]
+  sourceCode: string
+  link: string
+  stars: number
+  forks: number
+}
+
+const { project } = Astro.props as { project: Project }
 ---
 
-<div class='bg-blue-200 py-6 px-2'>
-  <div class='flex text-4xl px-8'>
+<div class='bg-blue-100 py-6 px-2'>
+  <div class='flex text-lg px-6 gap-2 flex-wrap'>
     <div class='flex-grow text-green'>
-      <i class='fa-regular fa-folder'></i>
+      {project.title}
     </div>
-    <div
-      class='flex-grow flex justify-end text-2xl gap-5 text-gray-100 hover:[&>a]:text-green'
-    >
-      <a href={project.sourceCode} target='_blank'>
-        <i class='fa-brands fa-github'></i>
-      </a>
-      <a href={project.link} target='_blank'>
-        <i class='fa-solid fa-up-right-from-square'></i>
-      </a>
+    <div class='flex justify-end items-center text-base gap-5 text-gray-100'>
+      <span class='flex items-center gap-1'>
+        <StarIcon />
+        {project.stars}
+      </span>
+      <span class='flex items-center gap-1'>
+        <ForkIcon />
+        {project.forks}
+      </span>
     </div>
   </div>
   <div class='px-6 py-4'>
-    <h4 class='text-2xl text-gray-100'>{project.title}</h4>
+    {project.link && 'In production'}
     <p class='mt-2 text-gray-200'>{project.description}</p>
   </div>
-  <div class='px-6 mt-4 flex gap-2'>
+  <div class='px-6 mt-4 flex gap-2 flex-wrap'>
     {project.languages.map((language) => <Language>{language}</Language>)}
   </div>
 </div>
