--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,5 +5,7 @@ import SectionContent from './SectionContent.astro';
 ---
 
 <SectionContent id='#projects' title='Proyectos'>
-  {projects.map((project) => <ProjectCard project={project} />)}
+  <div class='grid grid-cols-1 sm:grid-cols-2 gap-3'>
+    {projects.map((project) => <ProjectCard project={project} />)}
+  </div>
 </SectionContent>
