--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,19 +1,17 @@
-<footer
-  class='container flex flex-col gap-3 justify-center items-center text-gray-100'
->
-  <div class='mt-3'>
-    <p>{new Date().getFullYear()} - Todos los derechos reservados</p>
-  </div>
-  <div class='mb-3'>
-    <p>
-      Jeferson Limay -
-      <a
-        class='hover:text-green hover:underline'
-        href='mailto:c.jeferson.lc@gmail.com'
-        target='_blank'
-      >
-        c.jeferson.lc@gmail.com
-      </a>
-    </p>
-  </div>
+<footer class='text-gray-100 border-t-[1px] border-gray-100 py-6 text-sm'>
+  <p class='text-xl font-bold'>{new Date().getFullYear()}</p>
+  <p class='mt-4'>
+    Jeferson Limay -
+    <a
+      class='hover:text-green hover:underline'
+      href='mailto:c.jeferson.lc@gmail.com'
+      target='_blank'
+    >
+      c.jeferson.lc@gmail.com
+    </a>
+  </p>
+  <p class='mt-4 text-gray-200'>
+    Desarrollado en Visual Studio Code. Construido con Astro y Tailwind CSS,
+    desplegado con Vercel.
+  </p>
 </footer>
