--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import About from '../components/About.astro'
+import Footer from '../components/Footer.astro'
 import Projects from '../components/Projects.astro'
 import Skills from '../components/Skills.astro'
 import GitHubIcon from '../icons/social/GitHubIcon.astro'
@@ -28,6 +29,7 @@ import Layout from '../layouts/Layout.astro'
       <About />
       <Projects />
       <Skills />
+      <Footer />
     </section>
   </main>
 </Layout>
