--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,10 +2,25 @@
 import projects from '../utils/projects.json';
 import ProjectCard from './ProjectCard.astro';
 import SectionContent from './SectionContent.astro';
+
+const MAX_PROJECTS = 3
 ---
 
-<SectionContent id='#projects' title='Proyectos'>
-  <div class='grid grid-cols-1 sm:grid-cols-2 gap-3 lg:grid-cols-1'>
-    {projects.map((project) => <ProjectCard project={project} />)}
+<SectionContent id='#projects' title='Proyectos' viewT='title'>
+  <div class='grid grid-cols-1 sm:grid-cols-2 gap-3 lg:grid-cols-1'>    
+    {
+      projects
+        .filter((_, index) => index < MAX_PROJECTS)
+        .map((project) => <ProjectCard project={project} />)
+    }
+  </div>
+  <div class='flex justify-center items-center pt-4'>
+    <a
+      href='/projects'
+      class={`bg-green p-2 text-blue-200 hover:bg-blue-100
+      hover:text-green`}
+    >
+      Ver más
+    </a>
   </div>
 </SectionContent>
