--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,13 +1,21 @@
 ---
-import Footer from '../../components/Footer.astro';
-import ProjectCard from '../../components/ProjectCard.astro';
-import Layout from '../../layouts/Layout.astro';
-import projects from '../../utils/projects.json';
+import Footer from '../../components/Footer.astro'
+import ProjectCard from '../../components/ProjectCard.astro'
+import GoBackIcon from '../../icons/GoBackIcon.astro'
+import Layout from '../../layouts/Layout.astro'
+import projects from '../../utils/projects.json'
 ---
 
 <Layout title='Jeferson Limay | Proyectos'>
   <main class='xl:px-20 2xl:px-40 2xl:mx-20'>
     <section class='py-10'>
+      <a
+        href='/'
+        class={`inline-flex gap-2 p-[2px] mb-6 rounded-md text-green
+        hover:text-blue-100 hover:bg-green`}
+      >
+        <GoBackIcon /> Principal
+      </a>
       <h5
         class='mb-6 text-4xl text-gray-100 font-[700]'
         transition:name='title'
@@ -15,9 +23,9 @@ import projects from '../../utils/projects.json';
       >
         Proyectos
       </h5>
-      <p class='text-gray-200 w-[500px]'>
-        Aqui vas a encontrar una lista de todos los proyectos que he hido
-        realizando durante todos este tiempo. <span class='text-green'>;)</span>
+      <p class='text-gray-200 sm:w-[500px]'>
+        Aqui vas a encontrar una lista de todos los proyectos que he ido
+        realizando durante todo este tiempo. <span class='text-green'>;)</span>
       </p>
     </section>
     <section
