--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import About from '../components/About.astro'
 import Footer from '../components/Footer.astro'
+import Links from '../components/Links.astro'
 import Projects from '../components/Projects.astro'
 import Skills from '../components/Skills.astro'
 import GitHubIcon from '../icons/social/GitHubIcon.astro'
@@ -21,6 +22,7 @@ import Layout from '../layouts/Layout.astro'
           programador.
         </p>
       </div>
+      <Links />
       <div
         class='text-gray-100 [&>a]:inline-block hover:[&>a]:text-green lg:pr-4'
       >
