--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
 import SectionContent from './SectionContent.astro';
 ---
 
-<SectionContent id='#about' title='Acerca de mí'>
+<SectionContent id='about' title='Acerca de mí'>
   <div class='text-gray-200'>
     <p class='mb-4 [&>span]:text-green'>
       Desde 2019 estoy estudiando <span>TIC</span> y en 2021 fue que entré en el
