--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,7 +6,7 @@ import SectionContent from './SectionContent.astro';
 const MAX_PROJECTS = 3
 ---
 
-<SectionContent id='#projects' title='Proyectos' viewT='title'>
+<SectionContent id='projects' title='Proyectos' viewT='title'>
   <div class='grid grid-cols-1 sm:grid-cols-2 gap-3 lg:grid-cols-1'>    
     {
       projects
