--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -4,7 +4,7 @@ import SectionContent from './SectionContent.astro';
 import SkillIcon from './SkillIcon.astro';
 ---
 
-<SectionContent id='#skills' title='Habilidades'>
+<SectionContent id='skills' title='Habilidades'>
 	<div
 		class='text-gray-200 grid grid-cols-3 place-items-center gap-4'
 	>
