fix: accessibility problems

--- a/src/icons/ForkIcon.astro
+++ b/src/icons/ForkIcon.astro
@@ -1,4 +1,9 @@
-<svg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 448 512'>
+<svg
+  xmlns='http://www.w3.org/2000/svg'
+  height='1em'
+  aria-label='Github forks'
+  viewBox='0 0 448 512'
+>
   <path
     fill='currentColor'
     d='M80 104a24 24 0 1 0 0-48 24 24 0 1 0 0 48zm80-24c0 32.8-19.7 61-48
