--- a/src/icons/RedirectIcon.astro
+++ b/src/icons/RedirectIcon.astro
@@ -1,4 +1,9 @@
-<svg xmlns='http://www.w3.org/2000/svg' height='10px' viewBox='0 0 512 512'>
+<svg
+  xmlns='http://www.w3.org/2000/svg'
+  height='10px'
+  aria-label='To production'
+  viewBox='0 0 512 512'
+>
   <path
     fill='currentColor'
     d='M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7
