--- a/src/icons/skills/ReactIcon.astro
+++ b/src/icons/skills/ReactIcon.astro
@@ -3,6 +3,7 @@
   width='70'
   height='70'
   viewBox='0 0 128 128'
+  aria-label='React'
 >
   <g fill='currentColor'>
     <circle cx='64' cy='64' r='11.4'></circle>
