--- a/src/components/Language.astro
+++ b/src/components/Language.astro
@@ -1,3 +1,3 @@
-<span class='rounded-full py-1 px-3 bg-gray-200 text-gray-100 text-xs'>
+<span class='rounded-full py-1 px-3 bg-gray-100 text-blue-200 text-xs'>
   <slot />
 </span>
