--- a/src/icons/StarIcon.astro
+++ b/src/icons/StarIcon.astro
@@ -1,4 +1,9 @@
-<svg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 576 512'>
+<svg
+  xmlns='http://www.w3.org/2000/svg'
+  height='1em'
+  aria-label='Github stars'
+  viewBox='0 0 576 512'
+>
   <path
     fill='currentColor'
     d='M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3
